clusters/talos-cluster/apps/vault/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-internal
  labels:
    app.kubernetes.io/name: vault
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/component: server
  ports:
    - name: api
      port: 8200
      targetPort: 8200
    - name: cluster
      port: 8201
      targetPort: 8201
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  labels:
    app.kubernetes.io/name: vault
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/component: server
  ports:
    - name: api
      port: 8200
      targetPort: 8200
